evaluation/test_suite/positive/ub35/2.c
#include <stdio.h>
#include <stdint.h>

int main()
{
    int32_t x = 0x7fffffff;
    printf("%d\n", x * 2);
}
