evaluation/test_suite/negative/ub48/1.c
#include <stdio.h>
#include <stdint.h>

int main()
{
    int32_t x = 1578;
    printf("%d\n", x << 0);
}
